# voice_requirement_project

./: .gitignore  DESIGN_DOC.md  README.md  pyproject.toml  req_matrix.py  requirements.txt  setup_ffmpeg.ps1
app/: logic.py  main.py
certs/: cert.pem  key.pem
