[project]
name = "voice-requirement-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.0",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "torch>=2.10.0",
    "uvicorn>=0.40.0",
    "whisper>=1.1.10",
]
